Further changes to reactivate API commands (e.g. add button, delete device)
